# sock_manager

./: CMakeLists.txt  README.md  internal_fn.h  serror.h  smlist.h  sock_manager.c  sock_manager.cpp  sock_manager.h  types.h  types.hpp
example/: lmt_main.cpp  st_client.c  st_server.c  st_ws_client.c  st_ws_server.c  st_wss_client.c  st_wss_server.c
internal/: internal_fn - 副本 (2).h  internal_fn - 副本.h  internal_fn.h
post_office/: front_desk.h  post_office.c  sorting_center.h
post_office/messenger/: messenger.c  messenger.h
protocol/tcp_binary/: tcp_binary.c  tcp_binary.h
protocol/tcp_default/: tcp_default.h
protocol/websocket/: base64_encoder.h  ws.c  ws.h  ws2.cpp
report/: README.md
sock_manager/: external_fn.h  internal_fn.h  serror.h  sock_manager.cpp  sock_manager.h  types.h  types.hpp
sock_manager/protocol/tcp_binary/: tcp_binary.c  tcp_binary.h
sock_manager/protocol/tcp_default/: tcp_default.c  tcp_default.h
sock_manager/protocol/websocket/: ws.h  ws2.cpp
sock_manager/tools/common/: spin_lock.c  spin_lock.h
sock_manager/tools/common/old/: base64_encoder.c  sha1.c
sock_manager/tools/rwbuf/: rwbuf.c
sock_manager/tools/stl/: compiler.h  list.h  rbtree.h
tirgger/: rwtrd_call_tirgger.h  tirgger.c  tirgger.h
tools/common/: base64_encoder.c  common_fn.c  common_fn.h  hash_func.c  hash_func.h  nofile_ctl.c  nofile_ctl.h  sha1.c  sha1.h
tools/common/old/: base64_encoder.h  hash_func.c  hash_func.h  sha1.h
tools/heap_timer/: heap_obj.c  heap_timer.c  heap_timer.h
tools/rwbuf/: rwbuf.c  rwbuf.h
tools/stl/: list.h  rbtree.c  rbtree.cpp  rbtree.h  wlist.h
